- Fix IFW version information not apparent on macOS (QTIFW-1396)
- Update repository categories on server authentication request (QTIFW-1358)
- Fix recalculation of components to install in MaintenanceTool (QTIFW-694)
- Enable support for Qt 5.12. In Windows supported compilers are msvc2015 and msvc2017 (QTIFW-1312)
- Set default file permissions to installer created files on Unix (QTIFW-1412)

3.1.1
- Add fetch to the same pane with package categories (QTIFW-1284)
- Change text in Select Components view when selection of components is not possible (QTIFW-1241)
- Fix long description texts not properly shown by enabling scrolling (QTIFW-1308)
- Fix install button string having a font name in French translation (QTIFW-1333)
- Fix maintenance tool size (QTIFW-1322)
- Update Russian translation
- Enable links and text selection in component description fields (QTIFW-1292)

3.1.0
- Fix wizard's maximum size not to exceed screen maximum size (QTIFW-1227)
- Allow maintenancetool signing in Windows (QTIFW-667)
- Enable usage of categorized repositories (QTIFW-1147)
- Add possibility to check/uncheck repositories with one button click (QTIFW-1132)
- Update danish (da) translation for Qt installer-framework
- Add attribute to mark parts of install tree unstable (QTIFW-930)
   -> Setting AllowUnstablecomponents to true in config.xml will
    * allow installing other components when there are errors in scripts
    * allow installing other components when there are missing dependencies
    * allow installing other components when there are sha mismatches in metadata
    * will mark the 'broken' components uninstallable in treeview
- Add findFiles method (QTIFW-1094)
- Enable expanding items by default
- Add support dash (-) symbol in component name (QTIFW-948)
- Allow comparing non-numeric versions (QTIFW-948)
- Add Component::addAutoDependOn method
- Teach 'binarycreator' and 'repogen' to repack packages from repository (QTIFW-925)

3.0.6